Update: Trang Profile, Đơn hàng, thêm vào giỏ hàng và tạo đơn hàng thành công với phương thức thanh toán COD